# kabutan_qoq_growth_calc

./: .gitignore  CLAUDE.md  batch_qq.py  codelist.csv  pyproject.toml  qq.py  株探の財務情報を取得するツールを作成する際に用いた全プロンプト.csv
.claude/agents/: python-pro.md
data/output/: batch_summary copy.csv  quarterly_data_6637.csv  quarterly_data_9621.csv
src/: __init__.py  pdf_analyzer.py
tmp/: batch_qq_implementation.md  batch_qq_processing_flow.md  qq_implementation.md  qq_processing_flow.md
